# agents-exercise

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: example.py  interactive.py
src/agents_exercise/: __init__.py  config.py
src/agents_exercise/agent/: __init__.py  core.py  state.py
src/agents_exercise/prompts/: __init__.py  prompts.yaml
src/agents_exercise/tools/: __init__.py  calculator.py  search.py  time.py
tests/: __init__.py  conftest.py  test_agent.py  test_tools.py
